client side changes

--- a/server/action-server3/torikime/rpc-builder-csharp.j2
+++ b/server/action-server3/torikime/rpc-builder-csharp.j2
@@ -8,8 +8,8 @@ namespace {{ namespace | camelize }}
 
     public interface IRpc
     {
-        ushort ContractId { get; }
-        ushort RpcId { get; }
+        uint ContractId { get; }
+        uint RpcId { get; }
         Google.Protobuf.IMessage ReceievePayload(Potato.Network.Protocol.Payload payload);
         void SubscribeRequest(OnSubscribeRequestDelegate onSubscribeRequest);
     }
@@ -46,7 +46,7 @@ namespace {{ namespace | camelize }}
 
         public static IRpc GetRpc(Network.Protocol.Payload payload)
         {
-            return Rpcs.Find(x => x.ContractId == payload.Header.contract_id && x.RpcId == payload.Header.rpc_id);
+            return Rpcs.Find(x => x.ContractId == payload.Header.ContractId && x.RpcId == payload.Header.RpcId);
         }
 
         static private OnSubscribeRequestDelegate onSubscribeRequest;
